maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:54: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
      if(x==xi && y=yi+1){
               ^